Styled temperature section of page

--- a/src/style.css
+++ b/src/style.css
@@ -47,4 +47,17 @@ li {
 }
 
 .weather-temperature strong {
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.weather-temperature .units {
+  position: relative;
+  font-size: 16px;
+  top: -34px;
+}
+
+.fahrenheit-link {
+  text-decoration: none;
 }
