--- a/src/style.css
+++ b/src/style.css
@@ -16,12 +16,16 @@ ul {
 
 li {
   list-style: none;
-  text-transform: capitalize;
+
   font-size: 16px;
   line-height: 24px;
   font-weight: 100;
   margin: 0;
   padding: 0;
+}
+
+li::first-letter {
+  text-transform: capitalize;
 }
 
 .weather-app-wrapper {
