--- a/src/style.css
+++ b/src/style.css
@@ -68,6 +68,23 @@ li::first-letter {
   cursor: default;
 }
 
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temperature {
+  font-size: 13px;
+}
+
+.weather-forecast-temp-min {
+  opacity: 0.5;
+}
 #fahrenheit-link {
   text-decoration: none;
 }
