--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,14 @@
 body {
   font-family: "Poppins", sans-serif;
   color: #041f66;
+  background: linear-gradient(
+    to right,
+    #eea2a2 0%,
+    #bbc1bf 19%,
+    #57c6e1 42%,
+    #b49fda 79%,
+    #7ac5d8 100%
+  );
 }
 
 h1 {
